--- a/index.html
+++ b/index.html
@@ -5,14 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <nav class="nav-bar">
+      <img src="./images/spotify-logo.png" alt="spotify logo" />
+      <ul>
+        <li>Premiun</li>
+        <li>Discover</li>
+        <li>Help</li>
+        <li>Download</li>
+      </ul>
+    </nav>
+    <header class="header">
+      <h1>Music for everyone.</h1>
+      <h2>
+        Spotify is now free on mobile, tablet and computer. <br />Listen to the
+        right music, wherever you are.
+      </h2>
+    </header>
+    <section id="service">
+      <h3>What’s on Spotify?</h3>
+      <div class="service-container">
+        <article class="service-card">
+          <img src="./images/music-icon.png" alt="Music Icon" />
+          <h4>Millions of Songs</h4>
+          <p>There are millions of songs on Spotify</p>
+        </article>
+        <article class="service-card">
+          <img src="./images/high-quality-icon.png" alt="Music Icon" />
+          <h4>HD Music</h4>
+          <p>Listen to music as if you were listening live</p>
+        </article>
+        <article class="service-card">
+          <img src="./images/devices-icon.png" alt="Music Icon" />
+          <h4>Stream Everywhere</h4>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </article>
+      </div>
+    </section>
+    <section id="kanye">
+      <div id="text-box">
+        <h3>It’s as yeezy as Kanye West.</h3>
+        <!--Add line break afterwards -->
+        <div class="text-element">
+          <h4>Search</h4>
+          <p>Know what you want to listen to? Just search and hit play.</p>
+        </div>
+        <div class="text-element">
+          <h4>Browse</h4>
+          <p>
+            Check out the latest charts, brand new releases and great playlists
+            for right now.
+          </p>
+        </div>
+        <div class="text-element">
+          <h4>Discover</h4>
+          <p>
+            Enjoy new music every Monday with your own personal playlist. Or sit
+            back and enjoy radio.
+          </p>
+        </div>
+      </div>
+
+      <img
+        class="white-logo"
+        src="./images/spotify-icon-white.png"
+        alt="spotify logo"
+      />
+
+      <img
+        class="screenshot"
+        src="./images/spotify-app.jpg"
+        alt="app screenshot"
+      />
+    </section>
   </body>
 </html>
